--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -12,4 +12,14 @@
         <input type="submit" value="Log in">
     </p>
 </form>
+<p>
+    <a href="{% url 'accounts:password_reset' %}">
+        Forgotten your password?
+    </a>
+</p>
+<p>
+    <a href="{% url 'accounts:register' %}">
+        Registration
+    </a>
+</p>
 {% endblock %}
