--- a/templates/_inc/header.html
+++ b/templates/_inc/header.html
@@ -20,10 +20,12 @@
     <span class="user">
         {% if user.is_authenticated %}
         Hello {{ user }}, &nbsp;|&nbsp;
-        <a href="{% url 'accounts:logout' %}">Logout</a>,&nbsp;
-        <a href="{% url 'accounts:password_change' %}">Change password</a>
+        <a href="{% url 'accounts:password_change' %}">Change password</a>,&nbsp;
+        <a href="{% url 'accounts:edit' %}">Edit your account</a>,&nbsp;
+        <a href="{% url 'accounts:logout' %}">Logout</a>
         {% else %}
-        <a href="{% url 'accounts:login' %}">Log-in</a>
+        <a href="{% url 'accounts:login' %}">Log-in</a>,&nbsp;
+        <a href="{% url 'accounts:register' %}">Registration</a>
 
         {% endif %}
     </span>
