--- a/templates/registration/login.html
+++ b/templates/registration/login.html
@@ -16,6 +16,11 @@
         <input type="submit" value="Log in">
     </p>
 </form>
+<p>
+    <a href="{% url 'accounts:password_reset' %}">
+        Forgotten your password?
+    </a>
+</p>
 {% endif %}
 
 {% endblock %}
