create authentication through yandex, google, using oauth2; create emailbackend; create model Image, made migrations

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -187,8 +187,8 @@ ul.messages li a.close {
     display:block;
     color:#fff;
 }
-.social li.facebook { background:#3b5399; }
-.social li.twitter { background:#00cffa; }
+.social li.yandex { background:#b5b214; }/* #969412*/
+.social li.vk { background:#408cff; }
 .social li.google { background:#de1710; }
 
 
