--- a/accounts/templates/accounts/login.html
+++ b/accounts/templates/accounts/login.html
@@ -12,6 +12,24 @@
         <input type="submit" value="Log in">
     </p>
 </form>
+<div class="social">
+    <ul>
+        <li class="yandex">
+            <a href="{% url 'social:begin' 'yandex-oauth2' %}">Login with Yandex</a>
+        </li>
+    </ul>
+    <ul>
+        <li class="google">
+            <a href="{% url 'social:begin' 'google-oauth2' %}">Login with Google</a>
+        </li>
+    </ul>
+    <ul>
+        <!--  авторизация через vk пока не работает -->
+        <li class="vk">
+            <a href="{# url 'social:begin' 'vk-oauth2' #}#">Login with VK</a>
+        </li>
+    </ul>
+</div>
 <p>
     <a href="{% url 'accounts:password_reset' %}">
         Forgotten your password?
@@ -22,4 +40,5 @@
         Registration
     </a>
 </p>
+
 {% endblock %}
